--- a/employees.html
+++ b/employees.html
@@ -42,7 +42,7 @@
 
   <script>
     // CHANGE THIS to your own strong password before publishing
-    const PASSWORD = "antyflo2022";
+    const PASSWORD = "Antyflo3!";
 
     // Put your real links here (Google Drive folders, etc.)
     const LINKS = {
