--- a/employees.html
+++ b/employees.html
@@ -26,7 +26,7 @@
       <div class="cta-row">
         <button class="btn primary" onclick="login()">Unlock</button>
       </div>
-      <p class="tiny">Tip: change the password in <code>employees.html</code> before publishing.</p>
+      <p class="tiny">Employee Access Only.</p>
     </div>
 
     <div class="card" id="portal" style="display:none">
